@@ -64,20 +64,11 @@
                 <tal:relateditems tal:content="structure view/w/relatedItems/render" />
             </fieldset>
 
-            <fieldset id="folder-listing">
+            <fieldset id="folder-listing" tal:condition="not:context/is_empty">
                 <legend i18n:translate="">Contents</legend>
                 <tal:block define="listing_macro context/folder_listing/macros/listing;
                                    contentFilter python:{'portal_type': ['File', 'Link']}">
-                    <metal:use_macro use-macro="listing_macro">
-                        <metal:nocontent fill-slot="no_items_in_listing">
-                            <p class="discreet"
-                                tal:condition="not: folderContents"
-                                i18n:domain="plone"
-                                i18n:translate="description_no_items_in_folder">
-                                There are currently no items in this folder.
-                            </p>
-                        </metal:nocontent>
-                    </metal:use_macro>
+                    <metal:use_macro use-macro="listing_macro" />
                 </tal:block>
             </fieldset>
 
