@@ -6,7 +6,10 @@ Because you have to know where your towel is.
 1.0a4 (unreleased)
 ^^^^^^^^^^^^^^^^^^
 
-- Initial Brazilian Portuguese translation
+- Do not show the folder listing if there are no files or links inside the
+  News Article. [hvelarde]
+
+- Initial Brazilian Portuguese translation. [agnogueira]
 
 - NITF content type does not implement INonStructuralFolder any longer to
   allow folder factories menu. [jpgimenez]
